--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ table tr:hover {
 <main>
     <hr>
    <ul>
-    <li><a class="active2" href="/contact">소감</a></li>
+    <li><a class="active2" href="https://dy102.github.io/lifeacademy_contact/">소감</a></li>
     <li><a href="/idea">아이디어</a></li>
    </ul>
    <table>
