--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ table tr:hover {
     <hr>
    <ul>
     <li><a class="active2" href="https://dy102.github.io/lifeacademy_contact/">소감</a></li>
-    <li><a href="/idea">아이디어</a></li>
+    <li><a href="https://dy102.github.io/lifeacademy_idea/">아이디어</a></li>
    </ul>
    <table>
     <tr>
